@@ -1,10 +1,8 @@
 package com.ecommerce.template.security;
 
 import com.ecommerce.template.repository.UserRepository;
-
-import java.util.List;
-
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value; // ✨ Importante
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -22,6 +20,9 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays; // ✨ Importante
+import java.util.List;
+
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
@@ -35,16 +36,22 @@ public class SecurityConfig {
     @Autowired
     private OAuth2LoginSuccessHandler oAuth2LoginSuccessHandler;
 
+    // ✨ INYECTAMOS LA VARIABLE DE ENTORNO
+    // Lee lo que configuraste en Railway (o en application.properties si es local)
+    @Value("${cors.allowed-origins}")
+    private String corsAllowedOrigins;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(List.of(
-                "http://localhost:5173",
-                "https://gamerstore.up.railway.app/",
-                "https://gamer-store-teal.vercel.app/"));
+        // --- LISTA DE DOMINIOS DINÁMICA ---
+        // Convertimos el texto "http://...,https://..." en una lista real
+        config.setAllowedOrigins(Arrays.asList(corsAllowedOrigins.split(",")));
 
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Métodos permitidos
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        
         config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
@@ -55,37 +62,42 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        System.out.println("=== SECURITY CONFIG CARGADA ===");
+        // System.out.println("=== SECURITY CONFIG CARGADA ===");
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(csrf -> csrf.disable())
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-                        // 1. Rutas PÚBLICAS (Orden explícito)
-                        .requestMatchers("/api/auth/**").permitAll() // Login y Register
-                        .requestMatchers(HttpMethod.GET, "/api/products").permitAll() // Listar productos
-                        .requestMatchers(HttpMethod.GET, "/api/products/**").permitAll() // Detalle producto
-                        .requestMatchers(HttpMethod.GET, "/api/categories").permitAll() // Listar categorías
-                        .requestMatchers(HttpMethod.GET, "/api/categories/**").permitAll() // Detalle categoría (si existiera)
+                        // 1. Rutas PÚBLICAS
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/products").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/products/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/categories").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/categories/**").permitAll()
+                        .requestMatchers(HttpMethod.POST, "/api/orders/webhook").permitAll() // Webhook MP
+                        
+                        // 2. Rutas de USUARIO
+                        .requestMatchers(HttpMethod.POST, "/api/orders").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/orders/payment/process").authenticated()
 
-                        // 2. Rutas de ADMIN (Protegidas)
+                        // 3. Rutas de ADMIN
                         .requestMatchers(HttpMethod.POST, "/api/products").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.POST, "/api/products/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.PUT, "/api/products/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.DELETE, "/api/products/**").hasRole("ADMIN")
                         .requestMatchers(HttpMethod.POST, "/api/categories/**").hasRole("ADMIN")
-
                         .requestMatchers(HttpMethod.POST, "/api/images/upload").hasRole("ADMIN")
+                        
+                        // Gestión de Órdenes Admin
+                        .requestMatchers(HttpMethod.GET, "/api/orders").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.PATCH, "/api/orders/**").authenticated()
 
-                        // 3. Rutas de USUARIO/CLIENTE (Carrito - Protegidas)
+                        // 4. Todo lo demás requiere login
                         .requestMatchers("/api/cart/**").authenticated()
-
-                        // 4. Todo lo demás cerrado
                         .anyRequest().authenticated())
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .oauth2Login(oauth2 -> oauth2
-                .successHandler(oAuth2LoginSuccessHandler)
-            );
+                        .successHandler(oAuth2LoginSuccessHandler));
 
         return http.build();
     }
